# currenda-recruitment-task

./: conent.html  content_scrapper.py  example.py  main.py  pyproject.toml
