[tool.poetry]
name = "currenda-recruitment-task"
version = "0.1.0"
description = ""
authors = ["Mateusz Anikiej <mateusz@anikiej.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
